my home page updated

--- a/contact.html
+++ b/contact.html
@@ -4,30 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my home page</title>
+    <title>my second web</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>my home page</h1>
-        <nav>
         <a class="active" href="=index-html">start page</a>
         <a href="about.html">about me</a>
         <a href="hobby.html">my hobby</a>
         <a href="contact.html">contact us</a>
-    </nav>
+        
 
     </header>
     <main>
         <!-- headercontent -->
-        <p id="my-id">this is a new page</p>
-        <p class="my-class">my class</p>
-        <p class="two-classes">two class </p>
-        <img src="img1/guitar.webp"alt="A guitar" width="30px">
+        <h1>contact me</h1>
+        <form>
+            <label for="name">name:</label>
+            <input class="my-form" type="text" id="name"><br>
+
+            <label for="email">Email</label>
+            <input class="my form" type="email" id="email"><br>
+
+            <label for="message">Message:</label><br>
+            <textarea class="my-form" id="message" name="message"></textarea>
+
+            <input type="submit" value="send">
+
+
+
+        </form>
+        >
     </main>
     <footer>
         <!--sidfot,copyright-->
-        <p>&copy; 2023 my web page</p>
 
     </footer>
 
